<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Highonstudy</string>
    <string name="empty_result">No data!</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="youtube">YouTube</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="telegram">Telegram</string>
    <string name="instagram">Instagram</string>
    <string name="facebook_url">https://www.facebook.com/highonstudy.co</string>
    <string name="youtube_url">https://www.youtube.com/channel/UCLCZBjFU3VsWzj27UtWIlnw/</string>
    <string name="twitter_url">https://twitter.com/highonstudy</string>
    <string name="telegram_link">https://t.me/highonstudy_dotcom</string>
    <string name="instagram_link">https://instagram.com/highonstudy/</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="failed_text">failed_text</string>
    <string name="RETRY">RETRY</string>
    <string name="title_menu_refresh">Refresh</string>
    <string name="title_menu_saved">Save</string>
    <string name="no_connection">Can\'t Connect, Tap on Retry Button</string>
    <string name="fail_to_load">URL is Empty, Go Back</string>
    <string name="trending_articale">• Trending Article</string>
    <string name="explore">• Explore</string>
    <string name="jobs_by_qualification">• Jobs By Qualification</string>
    <string name="jobs_by_location">• Jobs By Location</string>
    <string name="Govt_Jobs">Govt Jobs</string>
    <string name="jobs_by_qualification_menu">Jobs By Qualification</string>
    <string name="jobs_by_location_menu">Jobs By Location</string>
    <string name="exam_news">Exam News</string>
    <string name="university_updates">University Updates</string>
    <string name="syllabus">Syllabus</string>
    <string name="scholarship">Scholarship</string>
    <string name="quiz_amp_mock_test"><![CDATA[Quiz & Mock Test]]></string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="settings">Settings</string>
    <string name="saved_jobs">Saved Jobs</string>
    <string name="official_website">Official Website</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact US</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="t_amp_c"><![CDATA[T&C]]></string>
    <string name="public_service_commission">• Public Service Commission</string>
    <string-array name="public_service_comission_name">
        <item>APPSC</item>
        <item>Arunachal PSC</item>
        <item>Assam PSC</item>
        <item>BPSC</item>
        <item>CGPSC</item>
        <item>Goa PSC</item>
        <item>GPSC</item>
        <item>HPSC</item>
        <item>HPPSC</item>
        <item>JPSC</item>
        <item>KPSC</item>
        <item>Kerala PSC</item>
        <item>MPPSC</item>
        <item>MPSC</item>
        <item>Manipur PSC</item>
        <item>Meghalaya PSC</item>
        <item>Mizoram PSC</item>
        <item>NPSC</item>
        <item>OPSC</item>
        <item>PPSC</item>
        <item>RPSC</item>
        <item>SPSC</item>
        <item>TNPSC</item>
        <item>TSPSC</item>
        <item>UPPSC</item>
        <item>WBPSC</item>
        <item>UKPSC</item>
        <item>JKPSC</item>
        <item>TPSC</item>
        <item>UPSC</item>
    </string-array>
    <string-array name="public_service_comission_link">
        <item>https://www.highonstudy.com/organization/appsc/</item>
        <item>https://www.highonstudy.com/organization/arunachal-pradesh-psc/</item>
        <item>https://www.highonstudy.com/organization/assam-psc/</item>
        <item>https://www.highonstudy.com/organization/bpsc/</item>
        <item>https://www.highonstudy.com/organization/cgpsc/</item>
        <item>https://www.highonstudy.com/organization/goa-psc/</item>
        <item>https://www.highonstudy.com/organization/gpsc/</item>
        <item>https://www.highonstudy.com/organization/hpsc/</item>
        <item>https://www.highonstudy.com/organization/hppsc/</item>
        <item>https://www.highonstudy.com/organization/jpsc/</item>
        <item>https://www.highonstudy.com/organization/kpsc/</item>
        <item>https://www.highonstudy.com/organization/kerala-psc/</item>
        <item>https://www.highonstudy.com/organization/mppsc/</item>
        <item>https://www.highonstudy.com/organization/mpsc/</item>
        <item>https://www.highonstudy.com/organization/manipur-psc/</item>
        <item>https://www.highonstudy.com/organization/meghalaya-psc/</item>
        <item>https://www.highonstudy.com/organization/mizoram-psc/</item>
        <item>https://www.highonstudy.com/organization/npsc/</item>
        <item>https://www.highonstudy.com/organization/opsc/</item>
        <item>https://www.highonstudy.com/organization/ppsc/</item>
        <item>https://www.highonstudy.com/organization/rpsc/</item>
        <item>https://www.highonstudy.com/organization/spsc/</item>
        <item>https://www.highonstudy.com/organization/tnpsc/</item>
        <item>https://www.highonstudy.com/organization/tspsc/</item>
        <item>https://www.highonstudy.com/organization/uppsc/</item>
        <item>https://www.highonstudy.com/organization/wbpsc/</item>
        <item>https://www.highonstudy.com/organization/ukpsc/</item>
        <item>https://www.highonstudy.com/organization/jkpsc/</item>
        <item>https://www.highonstudy.com/organization/tpsc/</item>
        <item>https://www.highonstudy.com/organization/upsc/</item>
    </string-array>
    <string-array name="explore_silder_title">
        <item>RAILWAY</item>
        <item>COURT</item>
        <item>BANK</item>
        <item>DEFENSE</item>
        <item>PSU</item>
        <item>ESIC</item>
        <item>POST OFFICE</item>
        <item>NHM</item>
        <item>SSC</item>
    </string-array>
    <string-array name="explore_slider_id">
        <item>21</item>
        <item>961</item>
        <item>bank</item>
        <item>969</item>
        <item>psu</item>
        <item>1200</item>
        <item>995</item>
        <item>1147</item>
        <item>25</item>
    </string-array>
    <string-array name="jobbyQ_title">
        <item>10th Pass</item>
        <item>12th Pass</item>
        <item>Graduate</item>
        <item>ITI</item>
        <item>Diploma</item>
        <item>Medical Degree</item>
        <item>Engineering</item>
        <item>PG Jobs</item>
        <item>M.Sc</item>
        <item>B.Tech</item>
        <item>MBA</item>
        <item>B.Sc</item>
    </string-array>
    <string-array name="jobbyQ_ID">
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>153</item>
        <item>42</item>
        <item>253</item>
        <item>41</item>
        <item>35</item>
        <item>37</item>
        <item>179</item>
        <item>36</item>
        <item>171</item>
    </string-array>
    <string-array name="jobbyL_title">
        <item>Andaman Nicobar</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>Telangana</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="jobbyL_link">
        <item>https://www.highonstudy.com/andaman-nicobar-jobs/</item>
        <item>https://www.highonstudy.com/andhra-pradesh/</item>
        <item>https://www.highonstudy.com/arunachal-pradesh-govt-jobs/</item>
        <item>https://www.highonstudy.com/assam-jobs/</item>
        <item>https://www.highonstudy.com/bihar-jobs/</item>
        <item>https://www.highonstudy.com/chhattisgarh-jobs/</item>
        <item>https://www.highonstudy.com/delhi-jobs/</item>
        <item>https://www.highonstudy.com/goa-jobs/</item>
        <item>https://www.highonstudy.com/gujarat-jobs/</item>
        <item>https://www.highonstudy.com/haryana-jobs/</item>
        <item>https://www.highonstudy.com/himachal-pradesh-jobs/</item>
        <item>https://www.highonstudy.com/jammu-kashmir-jobs/</item>
        <item>https://www.highonstudy.com/jharkhand-jobs/</item>
        <item>https://www.highonstudy.com/karnataka-jobs/</item>
        <item>https://www.highonstudy.com/kerala-jobs/</item>
        <item>https://www.highonstudy.com/madhya-pradesh-jobs/</item>
        <item>https://www.highonstudy.com/maharashtra-jobs/</item>
        <item>https://www.highonstudy.com/manipur-jobs/</item>
        <item>https://www.highonstudy.com/meghalaya-jobs/</item>
        <item>https://www.highonstudy.com/nagaland-jobs/</item>
        <item>https://www.highonstudy.com/odisha-jobs/</item>
        <item>https://www.highonstudy.com/state-jobs/puducherry/</item>
        <item>https://www.highonstudy.com/punjab-jobs/</item>
        <item>https://www.highonstudy.com/rajasthan-govt-jobs/</item>
        <item>https://www.highonstudy.com/sikkim-jobs/</item>
        <item>https://www.highonstudy.com/tamil-nadu-jobs/</item>
        <item>https://www.highonstudy.com/uttarakhand-government-jobs/</item>
        <item>https://www.highonstudy.com/up-government-jobs/</item>
        <item>https://www.highonstudy.com/telangana-jobs/</item>
        <item>https://www.highonstudy.com/wb-government-jobs/</item>
    </string-array>
    <string name="app_id">ca-app-pub-5671572697490506~5601068399</string>
    <string name="banner_id">ca-app-pub-5671572697490506/3258810232</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-5671572697490506/6087335315</string>
    <string name="placeholder">aiuciagcucglsgcgslcgslcshd</string>
    <string name="notifications">Notifications</string>
    <string name="delete_notify_msg">Do you want to delete this notification?</string>
    <string name="delete_all_notify_msg">Do you want to delete all notification?</string>
    <string name="empty_list">List is already empty!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear_all">Clear all</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_saved_item">Do you want to delete this post from saved list?</string>
    <string name="delete_all_saved_list">Do you want to delete all posts from saved list?</string>
    <string name="no_internet">No internet!</string>
    <string name="connect">Connect</string>
    <string name="top_stories"># Top Stories</string>
    <string name="latest_videos">Latest Videos</string>
</resources>