<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:checked="true"
        android:title="@string/home"/>
    <item
        android:id="@+id/action_govt"
        android:checkable="true"
        android:icon="@drawable/ic_star_menu"
        android:title="@string/Govt_Jobs"/>

    <item
        android:id="@+id/action_jobs_qualification"
        android:checkable="true"
        android:icon="@drawable/ic_star_menu"
        android:title="@string/jobs_by_qualification_menu"/>

    <item
        android:id="@+id/action_jobs_location"
        android:checkable="true"
        android:icon="@drawable/ic_star_menu"
        android:title="@string/jobs_by_location_menu"/>

    <item
        android:id="@+id/action_exam"
        android:checkable="true"
        android:icon="@drawable/ic_star_menu"
        android:title="@string/exam_news"/>

    <item
        android:id="@+id/action_university_updates"
        android:checkable="true"
        android:icon="@drawable/ic_star_menu"
        android:title="@string/university_updates"/>

    <item
        android:id="@+id/action_syllabus"
        android:checkable="true"
        android:icon="@drawable/ic_star_menu"
        android:title="@string/syllabus"/>

    <item
        android:id="@+id/action_scholarship"
        android:checkable="true"
        android:icon="@drawable/ic_star_menu"
        android:title="@string/scholarship"/>

    <item
        android:id="@+id/action_quiz_mock_test"
        android:checkable="true"
        android:icon="@drawable/ic_star_menu"
        android:title="@string/quiz_amp_mock_test"/>

    <item android:title="Social Links">
        <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/action_youtube"
                android:icon="@drawable/ic_youtube"
                android:title="@string/youtube"/>
            <item
                android:id="@+id/action_telegram"
                android:icon="@drawable/ic_telegram"
                android:title="@string/telegram"/>
            <item
                android:id="@+id/action_facebook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/facebook"/>

            <item
                android:id="@+id/action_instagram"
                android:icon="@drawable/ic_instagram"
                android:title="@string/instagram"/>

            <item
                android:id="@+id/action_twitter"
                android:icon="@drawable/ic_twitter"
                android:title="@string/twitter"/>
        </group>
        </menu>
    </item>

    <item
        android:title="Quick Links">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_save_job"
                    android:icon="@drawable/ic_save"
                    android:title="@string/saved_jobs"/>
                <item
                    android:id="@+id/action_official_site"
                    android:icon="@drawable/ic_official"
                    android:title="@string/official_website"/>
                <item
                    android:id="@+id/action_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about_us"/>

                <item
                    android:id="@+id/action_contact_us"
                    android:icon="@drawable/ic_contact"
                    android:title="@string/contact_us"/>

                <item
                    android:id="@+id/action_privacy"
                    android:icon="@drawable/ic_privacy"
                    android:title="@string/privacy_policy"/>

                <item
                    android:id="@+id/action_t_and_c"
                    android:icon="@drawable/ic_terms"
                    android:title="@string/t_amp_c"/>

            </group>
        </menu>
    </item>

    <item
        android:title="Others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_rate"
                    android:icon="@drawable/ic_rate"
                    android:title="@string/rate_our_app"/>
                <item
                    android:id="@+id/action_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings"/>
            </group>
        </menu>
    </item>

</menu>
